2010-06-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/Ghostview.c, src/process.c, src/ps.c: Use safe-dir from variable
	  gv_safe_gs_workdir.
	  
	* src/main.c: Check if global safe-dir is accessible, if not, create
	  a temporary one.
	  
	* src/Ghostview.c, src/Scrollbar.c, src/callbacks.c, src/ps.c:
	  Call clean_safe_tempdir on each position gv can exit.

	* src/main_globals.h: Two new vaiables gv_safe_gs_workdir and
	  gv_safe_gs_tempdir (=1 iff gv_safe_gs_workdir is temporary).

	* src/actions.c(clean_safe_tempdir): Delete temporary safe-dir.

2010-06-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/Makefile.am: Create s"afe-gs-workdir".

2010-06-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/FileSel.c, src/Scrollbar.c, src/actions.c,
	src/callbacks.c, src/file.c, src/main.c, src/misc.c, src/options_gv.c:
	  mkstemo and inttypes.h are always available after gnulib import

2010-06-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* m4/* lib/* updated gnulib and imported canonicalize-lgpl, inttypes
	  and mkstemp.
	  Note: I ran "sed -i 's/<config.h>/<ac_config.h>/g' lib/*" after the
	  import.
	  I imported from revision 8ab5996c4a14364411442d93babb343cc2ce0d89
	  of gnulib.

2010-05-30  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/gv_message.h: Document new options
	
	* rc/main.c: Parsing of new options --safedir and --nosafedir
	
	* src/main_globals.h: Global variable for each of the new options
	
	* src/resource.c: Modify resource GV.gsSafeDir on new options

2010-05-30  Bernhard R. Link <brlink@debian.org>

	* src/Ghostview.c, src/Ghostview.h, src/GhostviewP.h, src/Makefile.am,
	src/doc_misc.c, src/doc_misc.h, gv_layout_res.dat, src/gv_misc_res.dat,
	src/main.c, main_globals.h, main_resources.h, src/misc.c, options_gs.c,
	process.c, src/ps.c, src/ps.h, src/save.c, src/zoom.c:
	   New resource GV.gsSafeDir, ability to set it to true resp. false by