@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4 --doc-base=doc --tests-base=tests --aux-dir=. --no-libtool --macro-prefix=gl canonicalize-lgpl getopt inttypes mkstemp
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4 --doc-base=doc --tests-base=tests --aux-dir=. --no-libtool --macro-prefix=gl canonicalize-lgpl getopt inttypes mkdtemp mkstemp
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
@@ -235,6 +235,15 @@ libgnu_a_SOURCES += malloca.c
 EXTRA_DIST += malloca.h malloca.valgrind
 
 ## end   gnulib module malloca
+
+## begin gnulib module mkdtemp
+
+
+EXTRA_DIST += mkdtemp.c
+
+EXTRA_libgnu_a_SOURCES += mkdtemp.c
+
+## end   gnulib module mkdtemp
 
 ## begin gnulib module mkstemp
 
